# image-classifier

./: .gitignore  Image_Classifier_Guide.md  README.md  app.py  evaluate.py  main.py  pyproject.toml  train.py  utils.py
scripts/: download_cats.py  download_dogs.py  download_ducks.py  download_foxes.py
tests/: conftest.py  test_integration_train.py  test_utils.py
