[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]

[project]
name = "image-classifier"
version = "0.1.0"
description = "Dynamic image classifier with TensorFlow/Keras using folder-based labels"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "gradio>=5.49.1",
    "keras>=3.12.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "tensorflow>=2.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
train = "train:main"
evaluate = "evaluate:main"
classifier = "main:main"
gui = "app:launch"
app = "app:launch"
